INTYG-7986: Intygsperiod rättning position för AF00251

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.html
@@ -82,9 +82,11 @@
         </div>
       </div>
 
-      <div ng-if="viewstate.totalDays" class="row fold-animation fold-slide-animation ifyllnadsstod">
-        <div class="col-xs-12">
-          <i class="material-icons">lightbulb_outline</i>Intyget motsvarar en period på {{viewstate.totalDays}} dagar.
+      <div ng-if="viewstate.totalDays" class="fold-animation fold-slide-animation ifyllnadsstod">
+        <div class="row">
+          <div class="col-xs-12">
+            <i class="material-icons">lightbulb_outline</i>Intyget motsvarar en period på {{viewstate.totalDays}} dagar.
+          </div>
         </div>
       </div>
     </div>
