--- a/af/af00251/src/main/resources/META-INF/resources/webjars/af00251/minaintyg/views/view-cert.html
+++ b/af/af00251/src/main/resources/META-INF/resources/webjars/af00251/minaintyg/views/view-cert.html
@@ -13,8 +13,7 @@
                                                replaced-message-key="af00251.label.pageingress.{{certMeta.replacedBy.relationKod == 'KOMPLT' ? 'kompletterat' : 'ersatt'}}"></mi-certificate-header-pageingress>
 
             <div uib-collapse="!isCollapsed1" class="collapse">
-                <span dynamic-label key="modules.page-header.info.select-recipients-and-send"></span>
-                <span dynamic-label key="modules.page-header.info.customize-pdf"></span>
+                <span dynamic-label key="modules.page-header.info.select-recipients-and-send.af"></span>
                 <span dynamic-label key="modules.page-header.info.download-pdf"></span>
                 <span dynamic-label key="modules.page-header.info.archive"></span>
             </div>
