INTYG-7913: Lagt till valideringar för datum och flyttat valideringstext närmare sin komponent.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
@@ -10,7 +10,7 @@
         <span class="label-padding" wc-help-chevron-text help-text-key="{{config.orsakLabel}}.HLP"></span>
       </th>
     </tr>
-    <tr ng-repeat="orsak in model[config.modelProp]">
+    <tr ng-repeat-start="orsak in model[config.modelProp]">
       <td>
         <div class="input-wrapper">
           <input id="orsak-multi-{{$index}}-beskrivning"
@@ -45,7 +45,15 @@
         <button type="button" ng-if="$index > 0" class="btn btn-type-8" ng-click="deleteRow($index)"><i class="material-icons">remove_circle</i> Ta bort</button>
       </td>
     </tr>
+    <tr ng-repeat-end>
+      <td class="dodsorsak-validation">
+        <ue-validation-list field-type="dodsorsak" validations="validation.messagesByField[config.modelProp.toLowerCase() + '[' + $index +
+        '].beskrivning']"></ue-validation-list>
+        <ue-validation-list field-type="dodsorsak" validations="validation.messagesByField[config.modelProp.toLowerCase() + '[' + $index +
+        '].datum']"></ue-validation-list>
+      </td>
+    </tr>
   </table>
   <button type="button" ng-disabled="model[config.modelProp].length >= config.maxRows" class="btn btn-type-8" ng-click="addRow()"><i class="material-icons">add_circle</i> Lägg till sjukdom/skada</button>
-  <ue-validation-list field-type="dodsorsak" validations="orsakValidations"></ue-validation-list>
+  
 </div>
