DEVENV: Fixar layout på en tabrubrik

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -2,7 +2,7 @@
 
 <div class="tab-content-title-row">
 
-  <span ng-if="!viewState.intygProperties.isSent">Kompletteringsbegäran och administrativa frågor</span>
+  <span ng-if="!viewState.intygProperties.isSent" class="tab-content-title-row-title">Kompletteringsbegäran och administrativa frågor</span>
 
   <ul class="nav navbar-nav" ng-if="viewState.intygProperties.isSent">
     <li ng-class="{active: isFilterKomplettering}">
