--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
@@ -6,7 +6,7 @@
   </wc-alert-message>
 
   <div class="formly-field form-inline row hours-wrapper">
-    <div>
+    <div ng-if="!intygIsLocked">
       <label>
         <span dynamic-label key="{{::hoursPerWeek.labelkey1}}"></span>
         <input class="form-control hoursPerWeek" type="text"
@@ -69,7 +69,7 @@
 
     <ue-validation-list field-type="sjukskrivning_period" validations="overlapValidations"></ue-validation-list>
     
-    <div ng-if="viewstate.totalDays" class="fold-animation fold-slide-animation ifyllnadsstod">
+    <div ng-if="viewstate.totalDays && !intygIsLocked" class="fold-animation fold-slide-animation ifyllnadsstod">
       <i class="material-icons">lightbulb_outline</i>Intyget motsvarar en period på {{viewstate.totalDays}} dagar.
     </div>
 
