--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueLabel/ueLabel.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueLabel/ueLabel.scss
@@ -9,6 +9,9 @@ ue-label {
   .material-icons {
     color: $wc-color-21;
     margin-left: -4px;
+    &.is-locked {
+      color: $wc-color-09;
+    }
   }
 }
 
