INTYG-7913: Fix för validering av KKSF-003 i doi

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
@@ -42,7 +42,7 @@
         </wc-dropdown>
       </td>
       <td>
-        <button type="button" ng-if="$index > 0" class="btn btn-type-8" ng-click="deleteRow($index)"><i class="material-icons">remove_circle</i> Ta bort</button>
+        <button type="button" ng-if="$index > 0" class="btn btn-type-8" ng-click="deleteRow($index);validate()"><i class="material-icons">remove_circle</i> Ta bort</button>
       </td>
     </tr>
     <tr ng-repeat-end>
@@ -54,6 +54,6 @@
       </td>
     </tr>
   </table>
-  <button type="button" ng-disabled="model[config.modelProp].length >= config.maxRows" class="btn btn-type-8" ng-click="addRow()"><i class="material-icons">add_circle</i> Lägg till sjukdom/skada</button>
+  <button type="button" ng-disabled="model[config.modelProp].length >= config.maxRows" class="btn btn-type-8" ng-click="addRow();validate()"><i class="material-icons">add_circle</i> Lägg till sjukdom/skada</button>
   
 </div>
