INTYG-8008: Rättningar valideringsmeddelanden för sjukfrånvaroperioder AF00251

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.html
@@ -79,6 +79,8 @@
                   id="{{config.modelProp}}-addRow"
                   ng-click="viewstate.addRow()"><i class="material-icons">add_circle</i> Lägg till period
           </button>
+          <ue-validation-list field-type="ue-sjukfranvaro"
+                              validations="overlapValidations"></ue-validation-list>
         </div>
       </div>
 
