INTYG-6757: Flyttat fmb-varning till fråga för att den ska visas efter komplettering. Fixat styling på komplettering.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.scss
@@ -6,8 +6,16 @@ wc-inline-komplettering {
     .alert {
       display: block;
       margin-bottom: 0;
+    }
+  }
+
+  wc-bottom-fadeout {
+
+    .bottom-fadeout-gradient {
+      padding: 0 4px;
+    }
+    .scrollable-body:after {
       padding-bottom: 0;
-      padding-right: 20px;
     }
   }
 
