--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/fmbVarning.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/fmbVarning.directive.html
@@ -1,4 +1,4 @@
-<div>
+<div class="fmb-varning">
     <wc-alert-message ng-if="fmbVarning.overskriderRekommenderadSjukskrivningstid" alert-severity="warning">
       {{fmbVarning.text}}
     </wc-alert-message>
