--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.scss
@@ -32,6 +32,9 @@ ue-sjukskrivningar {
       margin-left: -4px;
     }
     color: $wc-color-21;
+    &.period {
+      padding-bottom: 18px;
+    }
   }
 
   .sjukskrivningar_period label {
