INTYG-7875: doneLoading != doneloading

--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
@@ -1,4 +1,4 @@
-<div ng-if="doneloading && !errorMessage">
+<div ng-if="doneLoading && !errorMessage">
   <mi-page-head>
     <mi-breadcrumb></mi-breadcrumb>
     <!-- Content -->
