--- a/ts/tstrk1009/src/main/resources/META-INF/resources/webjars/tstrk1009/minaintyg/views/view-cert.html
+++ b/ts/tstrk1009/src/main/resources/META-INF/resources/webjars/tstrk1009/minaintyg/views/view-cert.html
@@ -1,56 +1,56 @@
-<div ng-if="doneloading && !errorMessage">
-  <mi-page-head>
-    <mi-breadcrumb></mi-breadcrumb>
-    <!-- Content -->
-    <div class="row">
-      <div class="col-xs-12 col-sm-7">
-        <h1>
-          <span id="viewCertificateHeader" dynamic-label key="modules.page-header.view-intyg.page-title"></span>
-        </h1>
+  <div ng-if="doneLoading && !errorMessage">
+    <mi-page-head>
+      <mi-breadcrumb></mi-breadcrumb>
+      <!-- Content -->
+      <div class="row">
+        <div class="col-xs-12 col-sm-7">
+          <h1>
+            <span id="viewCertificateHeader" dynamic-label key="modules.page-header.view-intyg.page-title"></span>
+          </h1>
 
-        <mi-certificate-header-pageingress is-replaced="certMeta.isReplaced"
-                                           default-message-key="tstrk1009.label.pageingress"
-                                           replaced-message-key="tstrk1009.label.pageingress.{{certMeta.replacedBy.relationKod == 'KOMPLT' ? 'kompletterat' : 'ersatt'}}"></mi-certificate-header-pageingress>
+          <mi-certificate-header-pageingress is-replaced="certMeta.isReplaced"
+                                             default-message-key="tstrk1009.label.pageingress"
+                                             replaced-message-key="tstrk1009.label.pageingress.{{certMeta.replacedBy.relationKod == 'KOMPLT' ? 'kompletterat' : 'ersatt'}}"></mi-certificate-header-pageingress>
 
-        <div uib-collapse="!isCollapsed1" class="collapse">
-          <span dynamic-label key="modules.page-header.info.select-recipients-and-send.ts"></span>
-          <span dynamic-label key="modules.page-header.info.download-pdf"></span>
-          <span dynamic-label key="modules.page-header.info.archive"></span>
+          <div uib-collapse="!isCollapsed1" class="collapse">
+            <span dynamic-label key="modules.page-header.info.select-recipients-and-send.ts"></span>
+            <span dynamic-label key="modules.page-header.info.download-pdf"></span>
+            <span dynamic-label key="modules.page-header.info.archive"></span>
+          </div>
+
+          <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn btn-link btn-link-chevron"
+                  data-toggle="collapse">
+            <span dynamic-label key="modules.page-header.info.more.{{!isCollapsed1}}"></span>
+          </button>
+
         </div>
-
-        <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn btn-link btn-link-chevron"
-                data-toggle="collapse">
-          <span dynamic-label key="modules.page-header.info.more.{{!isCollapsed1}}"></span>
-        </button>
-
-      </div>
-      <div class="col-xs-12 col-sm-5">
-        <latest-events cert-id="{{cert.id}}" events="certMeta.events"></latest-events>
-      </div>
-    </div>
-  </mi-page-head>
-
-  <div class="container">
-    <div class="row-fluid">
-
-      <!-- Loading spinner: visibility defined by $scope.doneLoading  -->
-      <div mi-spinner label="modules.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
-        <mi-certificate-replaced cert-meta-model="certMeta"></mi-certificate-replaced>
-        <mi-certificate-action-buttons cert-model="cert" on-send="send(cert)" enable-archive="true" enable-print="true"
-                                       is-replaced="certMeta.isReplaced"></mi-certificate-action-buttons>
-
-        <mi-compact-certificate-header cert-meta-model="certMeta"></mi-compact-certificate-header>
-        <uv-render-components ng-class="{'certificate-header-replaced' : certMeta.isReplaced}" config="uvConfig"
-                              view-data="cert"></uv-render-components>
-
-        <div ng-if="!errorMessage" class="row col-xs-12 text-muted">
-          <br><span dynamic-label key="modules.view-intyg.end-of-intyg.text"></span>
+        <div class="col-xs-12 col-sm-5">
+          <latest-events cert-id="{{cert.id}}" events="certMeta.events"></latest-events>
         </div>
       </div>
+    </mi-page-head>
 
+    <div class="container">
+      <div class="row-fluid">
+
+        <!-- Loading spinner: visibility defined by $scope.doneLoading  -->
+        <div mi-spinner label="modules.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
+          <mi-certificate-replaced cert-meta-model="certMeta"></mi-certificate-replaced>
+          <mi-certificate-action-buttons cert-model="cert" on-send="send(cert)" enable-archive="true" enable-print="true"
+                                         is-replaced="certMeta.isReplaced"></mi-certificate-action-buttons>
+
+          <mi-compact-certificate-header cert-meta-model="certMeta"></mi-compact-certificate-header>
+          <uv-render-components ng-class="{'certificate-header-replaced' : certMeta.isReplaced}" config="uvConfig"
+                                view-data="cert"></uv-render-components>
+
+          <div ng-if="!errorMessage" class="row col-xs-12 text-muted">
+            <br><span dynamic-label key="modules.view-intyg.end-of-intyg.text"></span>
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
-</div>
 
-<mi-view-intyg-error-message id="errorMessage" msg-key="{{errorMessage}}" cert-id="certificateId"
-                             ng-if="doneLoading && errorMessage"></mi-view-intyg-error-message>
+  <mi-view-intyg-error-message id="errorMessage" msg-key="{{errorMessage}}" cert-id="certificateId"
+                               ng-if="doneLoading && errorMessage"></mi-view-intyg-error-message>
