--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.html
@@ -6,6 +6,6 @@
      class="wc-help-chevron__margin-bottom wc-help-chevron__arrow_box"
      ng-click="stopEvents($event)">
   <wc-bottom-fadeout color="28" class="wc-help-chevron__textarea">
-    <span class="multiline" ng-bind-html="text"></span>
+    <span class="multiline" bind-html-compile="text"></span>
   </wc-bottom-fadeout>
 </div>
