--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -119,6 +119,7 @@
   @import 'utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.scss';
   @import 'utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.scss';
   @import 'utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss';
+  @import 'utkast/unified-edit/components/ueDiagnosDate/ueDiagnosDate.scss';
   @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakFoljd.scss';
   @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.scss';
   @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss';
