INTYG-8072: kompletteringsmeddelandet ska bara visas i kompletteringstabben.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
@@ -49,7 +49,7 @@
   </div>
 
   <!-- Svarsdelen -->
-  <div ng-if="showAnswer() && !arendeSvar.answeredWithIntyg" class="kompletterad">
+  <div ng-if="showAnswer() && !arendeSvar.answeredWithIntyg && panelId == 'kompletteringar'" class="kompletterad">
     <wc-arende-komplettera-meddelande-confirmation arende-list="arendeList"></wc-arende-komplettera-meddelande-confirmation>
   </div>
 
