INTYG-8077: Fix för updatering av modellen när man valt kategorier.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
@@ -40,7 +40,7 @@
     <div class="kategori-footer">
       <input type="button" class="btn btn-success kategori-add" ng-disabled="isInteractionDisabled()"
                value="{{model[config.kategoriProp].length > 0 ? 'Uppdatera' : 'Lägg till'}}"
-               ng-click="add(kategorier)" />
+               ng-click="add(kategorier);updateValidation()" />
       <input type="button" class="btn btn-secondary kategori-rensa" value="Avbryt" ng-click="rensa()" ng-disabled="isInteractionDisabled()"/>
       <span><a href="https://www.socialstyrelsen.se/klassificeringochkoder/koderfunktionstillstandicf" target="_blank">Läs mer
         om ICF hos Socialstyrelsen<i class="external-link-icon material-icons">launch</i></a></span>
