INTYG-8032: Hjälplänkar har svart ikon

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueLabel/ueLabel.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueLabel/ueLabel.scss
@@ -6,7 +6,7 @@ ue-label {
     text-align: left;
   }
 
-  .material-icons {
+  .label-icon {
     color: $wc-color-21;
     margin-left: -4px;
     &.is-locked {
