INTYG-8088: Fix för diagnoser som inte har fmb-information och har en annan orginaldiagnos än vad som visas.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
@@ -13,7 +13,7 @@
                 popover-popup-delay="300" popover-append-to-body="true"
                 popover-placement="top">
                 <span>{{d.originalDiagnosBeskrivning}}</span> <i class="material-icons md-18 diagnosinfo"
-                   ng-if="d.diagnosKod !== d.originalDiagnosKod"
+                   ng-if="d.diagnosKod !== d.originalDiagnosKod && d.hasInfo"
                    uib-popover="Det FMB-stöd som visas är för koden {{d.diagnosKod}} - {{d.diagnosBeskrivning}}."
                    popover-popup-delay="300" popover-append-to-body="true"
                   popover-placement="top">info_outline</i>
