INTYG-7486: Uppdaterade text och dolde skickaknapp

--- a/ts/tstrk1009/src/main/resources/META-INF/resources/webjars/tstrk1009/minaintyg/views/view-cert.html
+++ b/ts/tstrk1009/src/main/resources/META-INF/resources/webjars/tstrk1009/minaintyg/views/view-cert.html
@@ -36,7 +36,7 @@
         <!-- Loading spinner: visibility defined by $scope.doneLoading  -->
         <div mi-spinner label="modules.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
           <mi-certificate-replaced cert-meta-model="certMeta"></mi-certificate-replaced>
-          <mi-certificate-action-buttons cert-model="cert" on-send="send(cert)" enable-archive="true" enable-print="true"
+          <mi-certificate-action-buttons cert-model="cert" enable-archive="true" enable-print="true"
                                          is-replaced="certMeta.isReplaced"></mi-certificate-action-buttons>
 
           <mi-compact-certificate-header cert-meta-model="certMeta"></mi-compact-certificate-header>
