--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/_variables.scss
@@ -1,10 +1,13 @@
 
 // We should have some kind of app-shared color scheme later perhaps. But for now let's use wc as standard.
+$wc-color-00: #FFFFFF;
+$wc-color-02: #FFEBBA;
+$wc-color-05: #765A20;
+$wc-color-07: #212121;
 $wc-color-09: #6A6A6A;
 $wc-color-13: #E1E1E1;
-$wc-color-20: #F2F2F2;
-$wc-color-00: #FFFFFF;
 $wc-color-16: #4C7B67;
+$wc-color-20: #F2F2F2;
 
 // Unified view variables
 $uv-intyg-body-bg: $wc-color-00 !default;
