INTYG-4808: Använder samma view-cert.html för alla intyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateActionButtons/miCertificateActionButtons.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateActionButtons/miCertificateActionButtons.directive.html
@@ -5,7 +5,7 @@
       <span ng-if="!isReplaced">
 
         <!-- SKICKA -->
-        <button id="sendCertificateBtn" type="button" class="btn btn-primary" ng-if="onSend"
+        <button id="sendCertificateBtn" type="button" class="btn btn-primary" ng-if="enableSend"
                 ng-click="onSend({cert:certModel});sendPopoverOpen=false;"
                 uib-popover="{{messageService.getProperty('modules.actionbar.button.send.tooltip')}}"
                 popover-is-open="sendPopoverOpen"
