--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosDate/ueDiagnosDate.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosDate/ueDiagnosDate.directive.html
@@ -82,11 +82,12 @@
                        placeholder="åååå"
                        maxlength="4"
                        class="form-control"
-                       ng-class="{'text-invalid' : hasValidationError('diagnosartal', $index) || hasValidationError('row', $index)}"
+                       ng-class="{'validation-error' : hasValidationError('diagnosartal', $index) || hasValidationError('row', $index),
+                       'text-invalid' : hasValidationError('diagnosartal', $index) || hasValidationError('row', $index)}"
                        ng-model="diagnos.diagnosArtal"
                        ng-model-options="{ getterSetter: true, allowInvalid: true}"
                        is-open="pickerState[$index].isOpen"
-                       ng-blur="onDatepickerInputFieldBlur(); updateValidation()"
+                       ng-blur="onDatepickerInputFieldBlur($index); validate()"
                        wc-blur-on-enter
                        ng-focus="focused($index)"
                        ue-year-only-parser
