INTYG-8205: Fix så att dropdownen inte kapas.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
@@ -41,6 +41,8 @@ body {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    flex-grow: 1;
+    min-height: 1%;
   }
 
   //defines padding for "page" workarea containers
