--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -120,6 +120,10 @@
   @import 'utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.scss';
   @import 'utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss';
   @import 'utkast/unified-edit/components/ueDiagnosDate/ueDiagnosDate.scss';
+  @import 'utkast/unified-edit/components/ueDiagnosUnderConstruction/ueDiagnosFk.scss';
+  @import 'utkast/unified-edit/components/ueDiagnosUnderConstruction/ueDiagnosKod.scss';
+  @import 'utkast/unified-edit/components/ueDiagnosUnderConstruction/ueDiagnosKodSystem.scss';
+  @import 'utkast/unified-edit/components/ueDiagnosUnderConstruction/ueDiagnosTs.scss';
   @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakFoljd.scss';
   @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.scss';
   @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss';
