--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosUnderConstruction/ueDiagnosFk.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosUnderConstruction/ueDiagnosFk.directive.html
@@ -1,11 +1,9 @@
 <div class="ue-diagnos-fk">
     <ng-form name="diagnosForm" class="diagnos-wrapper">
-        <div>
-            <ue-diagnos-kod-system config="::config" model="::model"></ue-diagnos-kod-system>
-        </div>
+        <ue-diagnos-kod-system config="::config" model="::model"></ue-diagnos-kod-system>
         <span class="diagnos-text" dynamic-label key="{{::config.diagnosKodLabel}}"></span>
         <div class="diagnos-row flex-row">
-            <div class="code-column">
+            <div class="diagnos-column">
                 <span ng-if="::config.enableHelp">
                   <span wc-help-chevron help-text-key="{{::config.diagnosKodHelp}}"></span>
                   <span wc-help-chevron-text help-text-key="{{::config.diagnosKodHelp}}"></span>
@@ -13,10 +11,10 @@
             </div>
         </div>
         <div class="diagnos-row flex-row" ng-repeat="diagnos in model[config.modelProp]">
-            <div class="code-column">
+            <div class="diagnos-column">
                 <ue-diagnos-kod form="::diagnosForm" config="::config" model="::model" index=$index></ue-diagnos-kod>
             </div>
-            <ue-validation-list field-type="{{config.type}}" validations="getValidationErrors($index)" ></ue-validation-list>
+            <ue-validation-list field-type="{{config.type}}" validations="getValidationErrors($index)"></ue-validation-list>
         </div>
     </ng-form>
 </div>
