--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosUnderConstruction/ueDiagnosKod.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosUnderConstruction/ueDiagnosKod.scss
@@ -21,77 +21,67 @@ ue-diagnos-kod {
 
   @extend %field-set-disabled-ie11-fix;
 
-  .ue-diagnos-kod {
-    position: relative;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+
+  .description-field {
+    padding-left: 20px;
+    min-width: 150px;
+    flex: 1;
+
+    input.form-control {
+      max-width: 100%;
+    }
   }
 
-  .diagnos-row {
-    padding-bottom: 15px;
-    flex-wrap: wrap;
+  .code-field {
+    width: 112px;
 
-    &:last-of-type{
-      padding-bottom: 0;
+    input.form-control {
+      padding: 0 9px;
     }
+  }
 
-    .diagnos-description-column {
-      padding-left: 20px;
-      flex: 1;
+  .diagnos-loading {
+    position: absolute;
+    right: 9px;
+    z-index: 10000;
+    top: 10px;
+  }
 
-      input.form-control {
-        max-width: 100%;
+  .dropdown-menu {
+    max-height: 350px;
+    max-width: 100%;
+    padding: 5px 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    border-color: $wc-color-21;
+    right: 0;
+
+    li {
+      a {
+        text-decoration: none;
       }
-    }
 
-    .code-column {
-      width: 112px;
-
-      input.form-control {
-        padding: 0 9px;
+      .kod {
+        vertical-align: top;
+        white-space: pre-wrap;
+        display: inline-block;
       }
-    }
 
-    .diagnos-loading {
-      position: absolute;
-      right: 9px;
-      z-index: 10000;
-      top: 10px;
-    }
+      .beskrivning {
+        width: 90%;
+        white-space: pre-wrap;
+        display: inline-block;
+      }
 
-    .dropdown-menu {
-      max-height: 350px;
-      max-width: 100%;
-      padding: 5px 0;
-      overflow-y: auto;
-      overflow-x: hidden;
-      border-color: $wc-color-21;
-      right: 0;
+      .disabled {
+        padding: 3px 20px;
+      }
 
-      li {
-        a {
-          text-decoration: none;
-        }
-
-        .kod {
-          vertical-align: top;
-          white-space: pre-wrap;
-          display: inline-block;
-        }
-
-        .beskrivning {
-          width: 90%;
-          white-space: pre-wrap;
-          display: inline-block;
-        }
-
-        .disabled {
-          padding: 3px 20px;
-        }
-
-        .typeahead_more {
-          padding: 3px 7px;
-          display: inline-block;
-        }
+      .typeahead_more {
+        padding: 3px 7px;
+        display: inline-block;
       }
     }
   }
