--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosUnderConstruction/ueDiagnosTs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosUnderConstruction/ueDiagnosTs.scss
@@ -13,13 +13,34 @@ ue-diagnos-ts {
     }
 
     .diagnos-row {
+      padding-bottom: 15px;
+      flex-wrap: wrap;
 
-      .code-column {
+      &:last-of-type{
+        padding-bottom: 0;
+      }
+
+      .diagnos-column {
         flex: 1;
       }
 
+      .diagnos-year-column {
+        padding-left: 20px;
+
+        .ue-del-fraga {
+          padding: unset;
+        }
+      }
+
+      ue-validation-list{
+        width: 100%;
+        flex-grow: 1;
+        margin-top: 6.5px;
+
+        .validation-error{
+          margin-top: 6.5px;
+        }
+      }
     }
-
-
   }
 }
