--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosAr/ueDiagnosAr.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosAr/ueDiagnosAr.directive.html
@@ -1,4 +1,4 @@
-<div class="ue-diagnos-ts">
+<div class="ue-diagnos-ar">
     <ng-form name="diagnosForm" class="diagnos-wrapper">
         <span class="diagnos-text" dynamic-label key="{{::config.diagnosKodLabel}}"></span>
         <div class="diagnos-row flex-row">
