INTYG-7052: Fixed two styling issues with IE11.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss
@@ -34,6 +34,7 @@ ue-diagnos {
     .diagnos-row {
       padding-bottom: 15px;
       flex-wrap: wrap;
+      display: block;
 
       &:last-of-type {
         padding-bottom: 0;
