--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosAr/ueDiagnosAr.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnosAr/ueDiagnosAr.scss
@@ -46,7 +46,7 @@ ue-diagnos-ar {
         padding-left: 20px;
 
         .ue-del-fraga {
-          padding: unset;
+          padding: 0px;
         }
       }
 
