INTYG-8329: Make sure that typeahead matches the diagnos column width.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueDiagnosKod/ueDiagnosKod.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueDiagnosKod/ueDiagnosKod.scss
@@ -23,6 +23,7 @@ ue-diagnos-kod {
 
   display: flex;
   flex-direction: row;
+  position: relative;
 
   .description-field {
     padding-left: 20px;
