INTYG-8341: Uppdaterat texten i om Webcert

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
@@ -51,15 +51,22 @@
 
     <h4>Kontakt och support</h4>
     <p>
-      Vid frågor gällande inloggning, kontakta leverantören av din e-legitimation eller SITHS/Efos-kortsadministratör.
+      Vid frågor gällande inloggning, kontakta leverantören av din e-legitimation eller SITHS-kortsadministratör.
     </p>
     <p>
-      Vid övriga frågor eller problem, kontakta <span dynamiclink key="ineraKundserviceAnmalFel"></span>
+      Tekniska frågor om Webcert hanteras i första hand av din lokala IT-avdelningen.
+      Om din lokala IT-avdelning inte kan hitta felet ska de kontakta <span dynamiclink key="ineraKundserviceAnmalFel"></span>
+    </p>
+    <p>
+      Har du som användare synpunkter på tjänsten kan du kontakta <span dynamiclink key="ineraKundserviceAnmalFel"></span>
     </p>
     <p>
       Inera AB<br>
       Box 17703<br>
       118 93 Stockholm<br>
+    </p>
+    <h4>Organisationsnummer</h4>
+    <p>
       Organisationsnummer: 556559-4230<br>
     </p>
   </div>
