INTYG-8360: Dölj bara scrollbar för fält i intygen

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextarea/ueTextArea.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextarea/ueTextArea.directive.scss
@@ -2,6 +2,7 @@ ue-textarea {
   display: block;
 
   textarea.form-control {
+    overflow-y: hidden;
     &:disabled, fieldset[disabled] & {
       background-color: $wc-color-20;
       color: $wc-color-09;
