--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/generic-input.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/generic-input.scss
@@ -14,7 +14,7 @@ textarea.form-control {
   border: 1px solid $wc-color-15;
   border-radius: 4px;
   transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-  overflow-y: hidden;
+  overflow-y: auto;
   resize: none;
 }
 textarea.form-control:focus {
